// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Task updatePackageJson with empty 1`] = `
Object {
  "description": undefined,
  "files": Array [
    "build",
  ],
  "module": "build/index.js",
  "name": undefined,
  "njp": Any<String>,
  "sideEffects": false,
  "typings": "build/index.d.ts",
  "version": undefined,
}
`;

exports[`Test Task updatePackageJson with njp and somod 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/index.js",
  "name": "@my-scope/my-module",
  "njp": Any<String>,
  "sideEffects": false,
  "typings": "build/index.d.ts",
  "version": "1.0.1",
}
`;

exports[`Test Task updatePackageJson with no sodaru module key 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/index.js",
  "name": "@my-scope/my-module",
  "njp": Any<String>,
  "sideEffects": false,
  "typings": "build/index.d.ts",
  "version": "1.0.1",
}
`;

exports[`Test Task updatePackageJson with normal 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/index.js",
  "name": "@my-scope/my-module",
  "njp": Any<String>,
  "sideEffects": false,
  "typings": "build/index.d.ts",
  "version": "1.0.1",
}
`;

exports[`Test Task updatePackageJson with not-allowed keys 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/index.js",
  "name": "@my-scope/my-module",
  "njp": Any<String>,
  "sideEffects": false,
  "typings": "build/index.d.ts",
  "version": "1.0.1",
}
`;

exports[`Test Task updatePackageJson with only njp 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/index.js",
  "name": "@my-scope/my-module",
  "njp": Any<String>,
  "sideEffects": false,
  "typings": "build/index.d.ts",
  "version": "1.0.1",
}
`;

exports[`Test Task updatePackageJson with only somod set for njp module 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/index.js",
  "name": "@my-scope/my-module",
  "njp": Any<String>,
  "sideEffects": false,
  "typings": "build/index.d.ts",
  "version": "1.0.1",
}
`;

exports[`Test Task updatePackageJson with wrong files 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/index.js",
  "name": "@my-scope/my-module",
  "njp": Any<String>,
  "sideEffects": false,
  "typings": "build/index.d.ts",
  "version": "1.0.1",
}
`;

exports[`Test Task updatePackageJson with wrong module 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/index.js",
  "name": "@my-scope/my-module",
  "njp": Any<String>,
  "sideEffects": false,
  "typings": "build/index.d.ts",
  "version": "1.0.1",
}
`;

exports[`Test Task updatePackageJson with wrong sideEffects 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/index.js",
  "name": "@my-scope/my-module",
  "njp": Any<String>,
  "sideEffects": false,
  "typings": "build/index.d.ts",
  "version": "1.0.1",
}
`;

exports[`Test Task updatePackageJson with wrong typings 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/index.js",
  "name": "@my-scope/my-module",
  "njp": Any<String>,
  "sideEffects": false,
  "typings": "build/index.d.ts",
  "version": "1.0.1",
}
`;
